src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_DuplicateStyleIds.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 xmlns:cc="core"> 
        <DockPanel.Resources>
                <Style x:Key="Style1" TargetType="{x:Type Button}">
                    <Setter Property="Background" Value="Blue" />
                    <Setter Property="Template">
                    
                    <ControlTemplate TargetType="{x:Type Button}">
                            <Border x:Name="StyleID" Background="{TemplateBinding Background}">
                                <StackPanel x:Name="StyleID"> 
                                            <ContentPresenter Content="{TemplateBinding Content}" />
                                </StackPanel>
                                </Border>
                    </ControlTemplate>
                    
                    </Setter>
                </Style>
        </DockPanel.Resources>

        <Button Style="{DynamicResource Style1}" />

</DockPanel>
</Page>
